--- a/3 - Implementacija/android/app/src/main/res/layout/fragment_recommendation.xml
+++ b/3 - Implementacija/android/app/src/main/res/layout/fragment_recommendation.xml
@@ -27,4 +27,24 @@
         app:layout_constraintTop_toTopOf="@+id/imageViewLogo"
         app:layout_constraintHorizontal_bias="0.1"/>
 
+    <TextView
+        android:id="@+id/textViewHeading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
+        android:text="PREPORUČENE KNJIGE"
+        android:textSize="30dp"
+        android:layout_marginTop="10dp"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayoutDynamicContent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/textViewHeading"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="10dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
