--- a/3 - Implementacija/android/app/src/main/res/layout/book.xml
+++ b/3 - Implementacija/android/app/src/main/res/layout/book.xml
@@ -5,39 +5,40 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
-        android:id="@+id/bookImage"
+        android:id="@+id/imageViewBookImage"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.15"
-        app:layout_constraintWidth_percent="0.8"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"/>
+        android:layout_marginLeft="50dp"
+        android:layout_width="130dp"
+        android:layout_height="200dp"/>
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/textViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Noz"
         android:textColor="@color/grey"
-        android:textSize="30dp"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bookImage"
-        app:layout_constraintVertical_bias="0.2"/>
+        app:layout_constraintLeft_toLeftOf="@id/imageViewBookImage"
+        app:layout_constraintRight_toRightOf="@id/imageViewBookImage"
+        app:layout_constraintTop_toBottomOf="@id/imageViewBookImage"
+        app:layout_constraintVertical_bias="0.16"/>
 
     <TextView
-        android:id="@+id/author"
+        android:id="@+id/textViewAuthor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ju Nesbe"
         android:textColor="@color/grey"
-        android:textSize="20dp"
+        android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        app:layout_constraintVertical_bias="0.1"/>
+        app:layout_constraintLeft_toLeftOf="@id/imageViewBookImage"
+        app:layout_constraintRight_toRightOf="@id/imageViewBookImage"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
+        app:layout_constraintVertical_bias="0.1"
+        android:layout_marginBottom="20dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
